[package]
name = "btcpay-password-reset"
version = "0.1.0"
authors = ["Martin Habovstiak <martin.habovstiak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pbkdf2 = "0.8.0"
hmac = "0.11.0"
sha2 = "0.9.5"
byteorder = "1.4.3"
postgres = "0.19.1"
crypto-mac = "0.11.0"
rand = "0.8.4"
